--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "builds": [
-    { "src": "vite.config.ts", "use": "@vercel/static-build" }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
-  ],
-  "outputDirectory": "dist"
+  ]
 }
